[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Sound/menu_theme.mp3" type="AudioStream" id=1]
[ext_resource path="res://SoundManager.gd" type="Script" id=2]

[node name="SoundManager" type="Node"]
script = ExtResource( 2 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -80.0

[node name="FadeOut" type="Tween" parent="."]

[node name="FadeIn" type="Tween" parent="."]

[connection signal="tween_completed" from="FadeOut" to="." method="_on_FadeOut_tween_completed"]
